# secondary-brain

./: .env.example  .gitignore  DEVELOPMENT.md  Makefile  PREREQUISITES.md  PRIVATE_ACCESS.md  PROJECT_PLAN.md  README.md  RELEASE_CHECKLIST.md  WEB_OPERATIONS.md  docker-compose.yml  main.py  pyproject.toml  reference.md  second-brain.md
docs/: SHOWCASE_MVP.md  SOCIAL_LAUNCH_COPY.md
docs/superpowers/plans/: 2026-06-03-command-center.md
docs/superpowers/specs/: 2026-06-03-command-center-design.md
scripts/: audit.py  chunking.py  config.py  doctor.py  embeddings.py  eval_smoke.py  graph.py  ingest.py  metadata.py  qdrant_setup.py  router.py  search.py  web.py  wiki.py
tests/: test_audit.py  test_chunking.py  test_doctor.py  test_eval_smoke.py  test_graph.py  test_ingest_incremental.py  test_metadata.py  test_reranking.py  test_router.py  test_search_citations.py  test_search_diagnostics.py  test_web.py  test_wiki.py
tests/fixtures/: smoke_queries.json
tests/fixtures/smoke_vault/: ai-reading.md  health-notes.md  project-alpha.md
vault/: welcome.md
