[project]
name = "second-brain"
version = "0.1.0"
description = "Privacy-first local AI knowledge assistant"
readme = "second-brain.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.0.0",
    "fastembed>=0.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.12.0",
    "rich>=13.0.0",
]

[project.scripts]
second-brain = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
